# stackalytics

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  MANIFEST.in  README.md  README.rst  config-generator.conf  openstack-common.conf  requirements-py3.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
dashboard/: dashboard.py  decorators.py  helpers.py  kpi.py  memory_storage.py  parameters.py  reports.py  vault.py  web.py  web.wsgi
dashboard/static/css/: jquery.dataTables.css  moonfonts.css  style.css
dashboard/static/js/: driverlog-ui.js  excanvas.min.js  jqplot.categoryAxisRenderer.min.js  jqplot.pieRenderer.min.js  jquery.gravatar.js  jquery.jqplot.min.js  stackalytics-ui.js
dashboard/templates/: 404.html  base.html  blueprint_report.html  commits.html  commits_overview.html  companies.html  company_details.html  engineer_details.html  engineers.html  layout.html  module_details.html  overview.html  unmapped.html  widget.html
dashboard/templates/_macros/: activity_log.html  contribution_summary.html  user_profile.html
dashboard/templates/kpi/: base_kpi.html  example.html  kpi.html
dashboard/templates/reports/: base_report.html  blueprint_summary.html  company_activity.html  contribution.html  driverlog.html  members.html  open_reviews.html  registrants.html  reviews.html  user_activity.html
doc/source/: conf.py  index.rst  tools.rst
doc/source/_templates/: sidebarlinks.html
doc/source/devref/: gerrit.rst  jenkins.rst  launchpad.rst
doc/source/tools/: stackalytics-dashboard.txt  stackalytics-dump.txt  stackalytics-processor.txt
etc/: copy_of_programs.yaml  corrections.json  corrections.schema.json  dashboard.conf  default_data.json  default_data.schema.json  domain-company  email-aliases  email-company  launchpad-company  launchpad-ids  openstack.conf  stackalytics.conf  test_default_data.json  test_programs.yaml  test_projects.yaml
scripts/: grab-all-emails.sh  grab-buglist.sh  grab-launchpad-ids.sh  grab-mailmap.sh  grab-unmatched.sh  pull-repos.sh
scripts/gerrit/: parse-reviews.py
scripts/launchpad/: buglist.py  grab-unmapped-launchpad-ids.py  map-email-to-lp-name.py
stackalytics/: version.py
stackalytics/dashboard/: config.py  decorators.py  helpers.py  kpi.py  memory_storage.py  parameters.py  reports.py  vault.py  web.py  web.wsgi
stackalytics/openstack/: __init__.py
stackalytics/processor/: bps.py  commit_processor.py  config.py  default_data_processor.py  driverlog.py  dump.py  governance.py  launchpad_utils.py  lp.py  main.py  mls.py  mps.py  normalizer.py  openstackid_utils.py  persistent_storage.py  rcs.py  record_processor.py  runtime_storage.py  schema.py  user_processor.py  user_utils.py  utils.py  vcs.py  zanata.py
tests/api/: test_api.py  test_companies.py  test_modules.py  test_releases.py  test_stats.py  test_users.py
tests/unit/: test_bps.py  test_commit_processor.py  test_config_files.py  test_dashboard.py  test_data.py  test_default_data_processor.py  test_driverlog.py  test_governance.py  test_mps.py  test_record_processor.py  test_utils.py  test_vcs.py  test_web_utils.py
tools/: check_openstackids.py  check_user_profiles.py  cli_auto_doc.py  install_venv.sh
(+73 files in other folders)
