[metadata]
name = stackalytics
version = 0.5
summary = OpenStack analytics dashboard
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    dashboard
    stackalytics

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[entry_points]
console_scripts =
    stackalytics-dump = stackalytics.processor.dump:main
    stackalytics-dashboard = dashboard.web:main
    stackalytics-processor = stackalytics.processor.main:main
