[metadata]
name = stackalytics
summary = OpenStack Contribution Dashboard
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    stackalytics
data_files =
    share/stackalytics = stackalytics/dashboard/static/*

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[entry_points]
console_scripts =
    stackalytics-dump = stackalytics.processor.dump:main
    stackalytics-dashboard = stackalytics.dashboard.web:main
    stackalytics-processor = stackalytics.processor.main:main

oslo.config.opts =
    oslo_log = oslo_log._options:list_opts
    stackalytics.dashboard.config = stackalytics.dashboard.config:list_opts
    stackalytics.processor.config = stackalytics.processor.config:list_opts
